# ops-mind-web

./: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
app/: app.css  root.tsx  routes.ts
app/components/: app-sidebar.tsx
app/components/ai-elements/: artifact.tsx  chain-of-thought.tsx  code-block.tsx  context.tsx  conversation.tsx  image.tsx  inline-citation.tsx  message.tsx  open-in-chat.tsx  prompt-input.tsx  tool.tsx  web-preview.tsx
app/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  calendar.tsx  carousel.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  hover-card.tsx  input-group.tsx  input-otp.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  popover.tsx  progress.tsx  sheet.tsx  sidebar.tsx  slider.tsx  spinner.tsx  switch.tsx  table.tsx  tabs.tsx  toggle-group.tsx  toggle.tsx
app/layouts/: app-layout.tsx
app/lib/: ai-sdk-types.ts  history-types.ts  optimistic-history.ts  sse-stream.ts
app/routes/: api.proxy.tsx  api.sop-history.tsx  api.sop.tsx  api.sse.tsx  home.tsx  sop-check-new.tsx
public/: logo.html
services/ai-stream/: .env.example  .gitignore  README.md  pyproject.toml
services/ai-stream/app/: deepagents_runtime.py  events.py  main.py
services/ai-stream/tests/: test_api.py  test_deepagents_runtime.py  test_events.py
