[project]
name = "ai-stream"
version = "0.1.0"
description = "Lightweight FastAPI LangGraph event stream test service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.12",
    "fastapi[standard]>=0.125.0",
    "httpx2>=0.28.0",
    "langchain-core>=1.0.0",
    "langchain-deepseek>=1.0.0",
    "langgraph>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
